update JVM tuning